--- a/src/MultiEvent.mdx
+++ b/src/MultiEvent.mdx
@@ -1,8 +1,7 @@
-{/* Checkbox.mdx */}
+import { Canvas, Meta } from "@storybook/blocks";
+import { Title, Subtitle, Description, Primary, Controls, Stories,Source,Story } from '@storybook/blocks';
 
-import { Canvas, Meta } from '@storybook/blocks';
-
-import * as CalendarStory from './MultiEvent.stories.tsx';
+import * as CalendarStory from "./MultiEvent.stories.tsx";
 
 <Meta of={CalendarStory} />
 
@@ -14,22 +13,42 @@ For a live demo visit [mehrizi.github.io/multi-event](https://mehrizi.github.io/
 
 ## key features:
 
-+ Multi calendar system support
-+ RTL support
-+ Weekends are configurable
-+ Week start is configurable
+- Multi calendar system support
+- RTL support
+- Weekends are configurable
+- Week start is configurable
 
 ## Installation
+
 ### Peer dependencies:
+
 - React (I assume you already have react installed to use a React component!)
 - Luxon which we use as date adapter: `npm i luxon --save`
 
 ### Install the package
-To install the package via npm simply run the following in root of your project: <br/>
+
+To install the package via npm simply run the following in root of your project: <br />
 `npm i multi-event-calendar --save`
 
-
-
 ### How to use
+It is important to remember that `<MultiEvent>` Component fills the parent width. It adjusts the height acoordingly.
+In this example the width is fixed to 300px
+<Canvas of={CalendarStory.Bounded} Source layout='padded' />
 
-<Canvas of={CalendarStory.Primary} layout='padded' />
+The Following code is simplest way of integrating the calendar
+```JSX
+import { DateTime } from "luxon";
+import {MultiEvent,Calendar,YearBar} from 'multi-event-calendar';
+
+let events =[{
+    time: DateTime.now(), // return a luson object
+    title: "Some event title", 
+    color: "#cab" //some color hex
+    // Your event might have other attributes but these 3 are must
+ }]
+
+<MultiEvent events={events}>
+    <YearBar />
+    <Calendar />
+</MultiEvent>
+```
